partman-partitioning (62) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Use convert_to_megabytes() in free_space/new/do_option and
    lib/resize.sh:ask_for_size().
    Depends: partman-base (>= 125)

 -- Jérémy Bobbio <lunar@debian.org>  Wed, 20 Aug 2008 00:06:08 +0200

partman-partitioning (61) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Update to the new debconf_select interface.
    Requires partman-base (>= 124).
  * Use cdebconf's new column alignment feature for active_partition.
    Requires partman-base (>= 124).
  * The valid_visuals.d mechanism has been removed from partman-base.  No need
    to ask for a refresh anymore in create_new_label().
    Requires partman-base (>= 124).
  * Remove unused partman-partitioning/new_partition_fs template.
  * Remove useless stralign in active_partition/resize/choices.
  * In create_new_label(), we now remove MD devices in the same way than LVM.
    As partman-md now scans for existing MD devices during
    partman initialization, it is required in order to make guided
    partitioning work on a disk that was previously used for an MD device.
    Requires partman-md (>= 42).

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel
  * Esperanto (eo.po) by Felipe Castro
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Croatian (hr.po) by Josip Rodin
  * Italian (it.po) by Milo Casagrande
  * Japanese (ja.po) by Kenshi Muto
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Marathi (mr.po) by Sampada
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Dutch (nl.po) by Frans Pop
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrișor