@@ -4,6 +4,11 @@ partman-partitioning (62) UNRELEASED; urgency=low
   * Use convert_to_megabytes() in free_space/new/do_option and
     lib/resize.sh:ask_for_size().
     Depends: partman-base (>= 125)
+  * Move the cleanup of LVM and MD devices out of create_new_label() to
+    prepare_new_labels() that needs to be called before create_new_label().
+    This function handle multiple devices at once.
+    Breaks: partman-auto (<< 81)
+  * Update storage_device/label/do_option to call prepare_new_labels().
 
  -- Jérémy Bobbio <lunar@debian.org>  Wed, 20 Aug 2008 00:06:08 +0200
 
